log
Thu 16 May 2024 08:13:09 PM UTC: 
 tests:  0|5
total_score: 0/70
0c50818
Thu 16 May 2024 08:39:58 PM UTC: 
 sudoku.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
d0fcf25
Thu 16 May 2024 08:41:19 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
a9b0ea3
Thu 16 May 2024 08:41:35 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
c65a7a2
Thu 16 May 2024 08:41:45 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
704c154
Thu 16 May 2024 08:42:53 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
1e42613
Thu 16 May 2024 08:44:48 PM UTC: 
 sudoku.c | 15 +++------------
 1 file changed, 3 insertions(+), 12 deletions(-)
 tests:  0|5
total_score: 0/70
d53e28b
Thu 16 May 2024 08:46:17 PM UTC: 
 sudoku.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
1ba906a
Thu 16 May 2024 08:48:59 PM UTC: 
 sudoku.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  0|5
total_score: 0/70
2adbeef
Thu 16 May 2024 08:51:33 PM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|5
total_score: 0/70
7d1af71
Thu 16 May 2024 08:56:57 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
4055b89
Thu 16 May 2024 08:59:18 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
964d608
Thu 16 May 2024 09:02:35 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
15fc935
Thu 16 May 2024 09:03:11 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
2b5890e
Thu 16 May 2024 09:07:35 PM UTC: 
 sudoku.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
3e7e84c
Thu 16 May 2024 09:08:06 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
ad8ceac
Thu 16 May 2024 09:14:24 PM UTC: 
 sudoku.c | 15 +++++++++++----
 1 file changed, 11 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:60:22: error: ‘Node’ has no member named ‘sumo’; did you mean ‘sudo’?
   60 |                if(n->sumo[i][j] == 0)
      |                      ^~~~
      |                      sudo
Compilation failed
07f0838
